Remove unnecessary line breaks (<br>)

--- a/star_maker/index.html
+++ b/star_maker/index.html
@@ -334,12 +334,12 @@
                         <h3>Strategy (次のステージへ)</h3>
                         <div class="box" style="border: 2px solid #ff4081;">
                             <p style="text-align: center; font-weight: bold; font-size: 1.2em;">
-                                「好条件」×「ブランド」で<br>最強のチームを作る。
+                                「好条件」×「ブランド」で最強のチームを作る。
                             </p>
                             <hr style="margin: 10px 0;">
                             <p>
-                                条件（日給）で来る人は、条件で去ります。<br>
-                                社長の<strong>「独立支援」や「挑戦マインド」</strong>に共感する、<br>
+                                条件（日給）で来る人は、条件で去ります。
+                                社長の<strong>「独立支援」や「挑戦マインド」</strong>に共感する、
                                 <strong>「右腕候補（幹部候補）」</strong>を動画で惹きつけましょう。
                             </p>
                         </div>
@@ -356,8 +356,8 @@
                         <div class="box">
                             <h3 style="margin-top:0; color:#d32f2f;">Industry Crisis (危機)</h3>
                             <ul>
-                                <li><strong>深刻な高齢化</strong>:<br>警備員の平均年齢は高く、2025項にはベテラン層の大量引退が予測される。</li>
-                                <li><strong>若手採用の難化</strong>:<br>「3K（きつい・危険・汚い）」のイメージが根強く、通常の求人では反応がない。</li>
+                                <li><strong>深刻な高齢化</strong>: 警備員の平均年齢は高く、2025項にはベテラン層の大量引退が予測される。</li>
+                                <li><strong>若手採用の難化</strong>: 「3K（きつい・危険・汚い）」のイメージが根強く、通常の求人では反応がない。</li>
                             </ul>
                         </div>
                     </div>
@@ -387,15 +387,12 @@
                         <div class="box">
                             <h3 style="margin-top:0;">採用市場のデータ</h3>
                             <p>
-                                求職者が応募前に「動画」を見ると、<br>
-                                <strong>応募率は約3倍</strong>に跳ね上がります。<br>
+                                求職者が応募前に「動画」を見ると、<strong>応募率は約3倍</strong>に跳ね上がります。<br>
                                 <span style="font-size:0.8em; color:#666;">(※Indeed採用市場レポート参照)</span>
                             </p>
                             <hr>
                             <p>
-                                特に20代-30代は、<br>
-                                「文字」よりも「雰囲気（動画）」で<br>
-                                職場環境を判断する傾向が顕著です。
+                                特に20代-30代は、「文字」よりも「雰囲気（動画）」で職場環境を判断する傾向が顕著です。
                             </p>
                         </div>
                     </div>
@@ -403,12 +400,9 @@
                         <div class="box simple">
                             <h3 style="margin-top:0;">成功事例 (Case Study)</h3>
                             <ul>
-                                <li><strong>A社（建築業・社員10名）</strong>:<br>
-                                    社長の想いを語る動画を公開後、<br>
-                                    採用コスト0円で3名の若手を採用。</li>
-                                <li style="margin-top:15px;"><strong>B社（運送業）</strong>:<br>
-                                    「キツい」イメージを「カッコいい」に転換し、<br>
-                                    未経験からの応募が殺到。</li>
+                                <li><strong>A社（建築業・社員10名）</strong>: 社長の想いを語る動画を公開後、採用コスト0円で3名の若手を採用。</li>
+                                <li style="margin-top:15px;"><strong>B社（運送業）</strong>:
+                                    「キツい」イメージを「カッコいい」に転換し、未経験からの応募が殺到。</li>
                             </ul>
                         </div>
                     </div>
@@ -462,7 +456,7 @@
         <div style="display:flex; justify-content:space-between; margin-top:30px;">
             <div style="width:23%;" class="box">
                 <h4 style="color:#ff4081;">Step 1: 取材</h4>
-                <p style="font-size:0.9em"><strong>(ヒアリング)</strong><br>社長の過去・現在・未来を徹底的に深掘りします。<br>※約60〜90分</p>
+                <p style="font-size:0.9em"><strong>(ヒアリング)</strong>社長の過去・現在・未来を徹底的に深掘りします。※約60〜90分</p>
             </div>
             <div style="width:2%; text-align:center; padding-top:40px;">▶</div>
             <div style="width:23%;" class="box">
@@ -501,7 +495,7 @@
                     <h4 style="color:#e91e63;">02. 制作・クリエイティブ<br><span
                             style="font-size:0.7em; color:#666;">Creator</span></h4>
                     <p>
-                        <strong>動画制作、HP制作、写真撮影。</strong><br>
+                        <strong>動画制作、HP制作、写真撮影。</strong>
                         ナレーターとしての「声」の演出も含め、御社のブランドを形にします。
                     </p>
                 </div>
@@ -511,7 +505,7 @@
                     <h4 style="color:#4caf50;">03. 拡散・運用<br><span style="font-size:0.7em; color:#666;">Marketer</span>
                     </h4>
                     <p>
-                        作って終わりではありません。<br>
+                        作って終わりではありません。
                         <strong>Web広告（YouTube/SNS）</strong>を運用し、ターゲットに確実に届けます。
                     </p>
                 </div>
@@ -566,7 +560,7 @@
             </div>
         </div>
         <p style="text-align:center; font-size:0.8em; margin-top:20px; color:#777;">
-            ※上記は「目的を達成するための概算投資額」です。<br>
+            ※上記は「目的を達成するための概算投資額」です。
             ご予算に合わせて柔軟にプランを組み立てます。
         </p>
         <div class="slide-number">9 / 12</div>
@@ -577,16 +571,14 @@
         <h2 style="border-left: none; text-align: center;">なぜ、「今」やるべきか？</h2>
         <div class="box" style="padding: 30px; border: none; background: transparent;">
             <p style="font-size: 1.5em !important; text-align: center; margin-bottom: 30px;">
-                社長の「時間」と「心」に、<br>
-                もっと余裕を持ってほしい。
+                社長の「時間」と「心」に、もっと余裕を持ってほしい。
             </p>
             <p style="text-align: center;">
                 私がいただくのは「制作費」ではありません。<br>
                 <strong>「社長が本来やるべき仕事に集中するための時間」への投資</strong>です。
             </p>
             <p style="text-align: center; font-weight: bold; margin-top: 30px;">
-                採用も、営業も、動画という「分身」に任せて、<br>
-                次の大きな挑戦へ向かいましょう。
+                採用も、営業も、動画という「分身」に任せて、次の大きな挑戦へ向かいましょう。
             </p>
         </div>
         <div class="slide-number">10 / 12</div>
