Refine P2 content: Remove negative phrasing and Gyakko reference

--- a/star_maker/index.html
+++ b/star_maker/index.html
@@ -294,11 +294,11 @@
                         <div class="box" style="padding: 20px !important;">
                             <h3 style="font-size: 1.1em !important; margin: 5px 0 8px 0 !important;">Mission</h3>
                             <p style="font-size: 18px !important;">
-                                <strong>「いいもの」を持っているのに、伝え方が下手な職人肌の経営者をなくす。</strong>
+                                <strong>「いいもの」を持っているのに、伝わらない。<br>その「もどかしさ」を解決する。</strong>
                             </p>
                             <p style="font-size: 16px !important; margin-bottom: 0;">
                                 単なる広告代理店ではなく、あなたの「発掘者（プロデューサー）」となり、
-                                <strong>「声（演出）×戦略（逆光）×指導（レッスン）」</strong>で業界のスターとしてデビューさせます。
+                                <strong>「声（演出）×戦略（企画）×指導（言語化）」</strong>で業界のスターとしてデビューさせます。
                             </p>
                         </div>
                     </div>
