--- a/star_maker/index.html
+++ b/star_maker/index.html
@@ -288,17 +288,17 @@
 
             <!-- 2. Concept -->
             <section>
-                <h2>1. コンセプト：「経営者を、タレントにする」</h2>
+                <h2>1. ご提案：「顔が見える」安心感を武器に。</h2>
                 <div class="cols">
                     <div class="col-6">
                         <div class="box" style="padding: 20px !important;">
                             <h3 style="font-size: 1.1em !important; margin: 5px 0 8px 0 !important;">Mission</h3>
                             <p style="font-size: 18px !important;">
-                                <strong>「いいもの」を持っているのに、伝わらない。<br>その「もどかしさ」を解決する。</strong>
+                                <strong>「どんな人と働くか」が見えるだけで、求職者の不安は「信頼」に変わる。</strong>
                             </p>
                             <p style="font-size: 16px !important; margin-bottom: 0;">
-                                単なる広告代理店ではなく、あなたの「発掘者（プロデューサー）」となり、
-                                <strong>「声（演出）×戦略（企画）×指導（言語化）」</strong>で業界のスターとしてデビューさせます。
+                                無理にタレントのように振る舞う必要はありません。
+                                <strong>「社長のありのままの想い」</strong>を言葉にし、映像に乗せて届ける。それだけで、強力な差別化になります。
                             </p>
                         </div>
                     </div>
