Add Cafe LP Sample & Update Gallery

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -474,6 +474,17 @@
                 </div>
             </div>
 
+            <!-- Card: Cafe Concrete -->
+            <div class="card" data-category="web-lp photo lifestyle female" onclick="openModal('ec_cafe_lp')">
+                <img src="img/cafe_hero.png" alt="Cafe Concrete">
+                <div class="card-info">
+                    <span class="card-tag">Web / LP Sample</span>
+                    <span class="card-id">#NST-092</span>
+                    <h2 class="card-title">Cafe Concrete</h2>
+                    <p class="card-desc">都会の喧騒を忘れる、無機質カフェのHP。</p>
+                </div>
+            </div>
+
             <!-- Card: Mobile Biz 1 -->
             <div class="card" data-category="photo female business gadget" onclick="openModal('ec_mobile_biz_1')">
                 <img src="img/ec_mobile_biz_1.jpg" alt="Voice Command">
