Complete Cafe LP: Add Logo, Fix Images, Add Shop

--- a/imagestock/cafe_lp.html
+++ b/imagestock/cafe_lp.html
@@ -225,6 +225,7 @@
         <div class="hero-bg"></div>
         <div class="hero-overlay"></div>
         <div class="hero-content">
+            <img src="img/cafe_logo.png" alt="CAFE CONCRETE" style="width: 150px; margin-bottom: 2rem; opacity: 0.9;">
             <h1>CAFE CONCRETE</h1>
             <p>Urban Sanctuary in the City</p>
         </div>
@@ -247,25 +248,44 @@
     <section class="menu-section">
         <h2 class="menu-title">MENU & SCENE</h2>
         <div class="menu-grid">
-            <!-- Reuse existing images/placeholders for now -->
             <div class="menu-item">
-                <div
-                    style="height:300px; background:#ddd; display:flex; align-items:center; justify-content:center; color:#777;">
-                    COFFEE</div>
+                <img src="img/cafe_detail_coffee.png" alt="Hand Drip Coffee">
                 <h3>Hand Drip</h3>
                 <p>厳選されたシングルオリジン豆を使用。</p>
             </div>
             <div class="menu-item">
-                <img src="img/cafe_hero.png" alt="Atmosphere">
+                <img src="img/cafe_relax.png" alt="Relaxing Atmosphere">
                 <h3>Atmosphere</h3>
                 <p>心地よい音楽と、開放的な窓辺。</p>
             </div>
             <div class="menu-item">
-                <div
-                    style="height:300px; background:#ddd; display:flex; align-items:center; justify-content:center; color:#777;">
-                    FLOWERS</div>
+                <img src="img/cafe_flowers.png" alt="Seasonal Flowers">
                 <h3>Flowers</h3>
                 <p>週替わりのフラワーアレンジメント。</p>
+            </div>
+        </div>
+    </section>
+
+    </section>
+
+    <section class="section" style="background:#fff; text-align:center;">
+        <h2 class="menu-title">ONLINE SHOP</h2>
+        <p style="margin-bottom: 3rem;">ご自宅でも、CAFE CONCRETEの時間をお楽しみください。</p>
+        <div class="menu-grid">
+            <div class="menu-item">
+                <img src="img/cafe_shop_beans.png" alt="House Blend Beans">
+                <h3>House Blend Beans</h3>
+                <p>¥1,800</p>
+            </div>
+            <div class="menu-item">
+                <img src="img/cafe_shop_mug.png" alt="Original Mug">
+                <h3>Original Ceramic Mug</h3>
+                <p>¥2,500</p>
+            </div>
+            <div class="menu-item">
+                <img src="img/cafe_shop_clutch.png" alt="Original Tote">
+                <h3>Original Tote Bag</h3>
+                <p>¥4,200</p>
             </div>
         </div>
     </section>
