Fix logo transparency using screen blend mode

--- a/imagestock/cafe_lp.html
+++ b/imagestock/cafe_lp.html
@@ -225,7 +225,8 @@
         <div class="hero-bg"></div>
         <div class="hero-overlay"></div>
         <div class="hero-content">
-            <img src="img/cafe_logo.png" alt="CAFE CONCRETE" style="width: 150px; margin-bottom: 2rem; opacity: 0.9;">
+            <img src="img/cafe_logo.png" alt="CAFE CONCRETE"
+                style="width: 150px; margin-bottom: 2rem; opacity: 1; mix-blend-mode: screen;">
             <h1>CAFE CONCRETE</h1>
             <p>Urban Sanctuary in the City</p>
         </div>
