Fill in missing voice method details

--- a/method/index.html
+++ b/method/index.html
@@ -587,14 +587,33 @@
                     <div class="content-text">速すぎることによって滑舌に問題が出ていないか</div>
                 </div>
 
-                <div class="detail-box basic" style="border-style: dashed; background: none;">
+                <div class="detail-box basic">
                     <span class="label">Basic Rule</span>
-                    <div class="content-text" style="color:#aaa;">(Method to be defined)</div>
+                    <div class="content-text">相手が映像をイメージできる速度（1分間300文字程度）を保つ</div>
                 </div>
 
-                <div class="section-title">Notes</div>
-                <div class="memo-area" style="border:none; padding:0; flex-grow:1;">
-                    <div class="empty-lines" style="height: 100%; box-sizing:border-box;"></div>
+                <div class="deep-dive">
+                    <h4>💡 Deep Dive: 緩急（チェンジ・オブ・ペース）</h4>
+                    <div style="font-size: 0.95rem; line-height: 1.6;">
+                        ずっと同じ速度では、相手の脳が「BGM」と認識してしまいます。<br>
+                        <strong>・大事なところ = ゆっくり（2倍時間をかける）</strong><br>
+                        <strong>・情景描写・補足情報 = 少し速める</strong><br>
+                        この「緩急」が、話にリズムと引力を生みます。
+                    </div>
+                </div>
+
+                <div class="section-title">Example & Practice</div>
+                <div class="example-area">
+                    <div class="example-text">
+                        昔々、あるところに、<span class="mark">おじいさんとおばあさん<span class="bubble">標準</span></span>が住んでいました。
+                        おじいさんは山へ芝刈りに、<span class="mark">おばあさんは川へ洗濯に<span class="bubble">少し速く(状況説明)</span></span>行きました。
+                        すると、川上から、<span class="mark">ドンブラコ、ドンブラコ<span class="bubble">ゆっくり(強調)</span></span>と、
+                        大きな桃が流れてきました。
+                    </div>
+                </div>
+                <div class="memo-area">
+                    <span class="memo-title">Memo</span>
+                    <div class="empty-lines" style="height: 100px;"></div>
                 </div>
                 <div class="footer">The Standard / Confidential</div>
             </div>
