Fill in remaining missing voice method details

--- a/method/index.html
+++ b/method/index.html
@@ -687,13 +687,34 @@
                 <span class="label">Goal</span>
                 <div class="content-text">相手に相槌を打たせられているか</div>
             </div>
-            <div class="detail-box basic" style="border-style: dashed; background: none;">
+            <div class="detail-box basic">
                 <span class="label">Basic Rule</span>
-                <div class="content-text" style="color:#aaa;">(Method to be defined)</div>
+                <div class="content-text">「、」で0.5秒、「。」で1秒。「間」こそが言葉の意味を作る。</div>
             </div>
-            <div class="section-title">Notes</div>
-            <div class="memo-area" style="border:none; padding:0; flex-grow:1;">
-                <div class="empty-lines" style="height: 100%; box-sizing:border-box;"></div>
+
+            <div class="deep-dive">
+                <h4>💡 Deep Dive: 「沈黙」を恐れない</h4>
+                <div style="font-size: 0.95rem; line-height: 1.6;">
+                    間（ポーズ）には2つの効果があります。<br>
+                    <strong>1. 整理の時間：</strong> 相手が直前の言葉を理解・咀嚼するための時間。<br>
+                    <strong>2. 期待の時間：</strong> 「次はなんだろう？」と注意を引くための時間。<br>
+                    沈黙は放送事故ではありません。最高の演出です。
+                </div>
+            </div>
+
+            <div class="section-title">Example & Practice</div>
+            <div class="example-area">
+                <div class="example-text">
+                    私が一番伝えたいこと。<span class="mark">（間）<span class="bubble">注目させる</span></span>
+                    それは、<span class="mark">「継続は力なり」<span class="bubble">強調</span></span>ということです。
+                    どんなに小さなことでもいい。<span class="mark">（間）<span class="bubble">整理させる</span></span>
+                    毎日続けることで、<span class="mark">（間）<span class="bubble">期待</span></span>
+                    必ず未来は変わります。
+                </div>
+            </div>
+            <div class="memo-area">
+                <span class="memo-title">Memo</span>
+                <div class="empty-lines" style="height: 100px;"></div>
             </div>
             <div class="footer">The Standard / Confidential</div>
         </div>
@@ -711,13 +732,32 @@
                 <span class="label">Goal</span>
                 <div class="content-text">話に関係のないフィラーが入ってしまっていないか</div>
             </div>
-            <div class="detail-box basic" style="border-style: dashed; background: none;">
+            <div class="detail-box basic">
                 <span class="label">Basic Rule</span>
-                <div class="content-text" style="color:#aaa;">(Method to be defined)</div>
+                <div class="content-text">言葉に詰まったら「ー（伸ばし棒）」ではなく「ッ（無音）」にする</div>
             </div>
-            <div class="section-title">Notes</div>
-            <div class="memo-area" style="border:none; padding:0; flex-grow:1;">
-                <div class="empty-lines" style="height: 100%; box-sizing:border-box;"></div>
+
+            <div class="deep-dive">
+                <h4>💡 Deep Dive: フィラーは「ノイズ」</h4>
+                <div style="font-size: 0.95rem; line-height: 1.6;">
+                    「えー」「あー」「そのー」は、自信のなさを表すノイズです。<br>
+                    思考中の時間は、音を出さずに<strong>「無音」</strong>にしましょう。<br>
+                    堂々とした印象に変わります。
+                </div>
+            </div>
+
+            <div class="section-title">Example & Practice</div>
+            <div class="example-area">
+                <div class="example-text">
+                    <span style="color:#ccc;">えー、</span>本日は、<span style="color:#ccc;">あのー、</span>新商品について<span
+                        style="color:#ccc;">まー、</span>ご説明します。<br>
+                    ↓<br>
+                    <strong>本日は、（ッ）新商品について、（ッ）ご説明します。</strong>
+                </div>
+            </div>
+            <div class="memo-area">
+                <span class="memo-title">Memo</span>
+                <div class="empty-lines" style="height: 100px;"></div>
             </div>
             <div class="footer">The Standard / Confidential</div>
         </div>
@@ -735,13 +775,22 @@
                 <span class="label">Goal</span>
                 <div class="content-text">返答が不自然になっていないか</div>
             </div>
-            <div class="detail-box basic" style="border-style: dashed; background: none;">
+            <div class="detail-box basic">
                 <span class="label">Basic Rule</span>
-                <div class="content-text" style="color:#aaa;">(Method to be defined)</div>
+                <div class="content-text">「さしすせそ」の相槌で、相手の感情に共感する</div>
             </div>
-            <div class="section-title">Notes</div>
-            <div class="memo-area" style="border:none; padding:0; flex-grow:1;">
-                <div class="empty-lines" style="height: 100%; box-sizing:border-box;"></div>
+            <div class="example-area">
+                <div class="example-text">
+                    <strong>さ：</strong>さすがですね！<br>
+                    <strong>し：</strong>知らなかったです！<br>
+                    <strong>す：</strong>素敵ですね！ / すごいですね！<br>
+                    <strong>せ：</strong>センスいいですね！<br>
+                    <strong>そ：</strong>そうなんですか！
+                </div>
+            </div>
+            <div class="memo-area">
+                <span class="memo-title">Memo</span>
+                <div class="empty-lines" style="height: 100px;"></div>
             </div>
             <div class="footer">The Standard / Confidential</div>
         </div>
@@ -759,13 +808,21 @@
                 <span class="label">Goal</span>
                 <div class="content-text">意味のない視線逸らしをしていないか</div>
             </div>
-            <div class="detail-box basic" style="border-style: dashed; background: none;">
+            <div class="detail-box basic">
                 <span class="label">Basic Rule</span>
-                <div class="content-text" style="color:#aaa;">(Method to be defined)</div>
+                <div class="content-text">「ワンセンテンス・ワンパーソン」。一文言い終わるまで目を離さない</div>
             </div>
-            <div class="section-title">Notes</div>
-            <div class="memo-area" style="border:none; padding:0; flex-grow:1;">
-                <div class="empty-lines" style="height: 100%; box-sizing:border-box;"></div>
+            <div class="deep-dive">
+                <h4>💡 Deep Dive: アイコンタクトは「3秒」</h4>
+                <div style="font-size: 0.95rem; line-height: 1.6;">
+                    視線が泳ぐと「嘘をついている」「自信がない」と思われます。<br>
+                    1人の目（または眉間）を3秒間見つめて語りかけ、次の文で別の人に視線を移します。<br>
+                    （カメラの場合は、レンズの奥にいる「たった一人の大切な人」を想像します）
+                </div>
+            </div>
+            <div class="memo-area">
+                <span class="memo-title">Memo</span>
+                <div class="empty-lines" style="height: 100px;"></div>
             </div>
             <div class="footer">The Standard / Confidential</div>
         </div>
@@ -783,13 +840,21 @@
                 <span class="label">Goal</span>
                 <div class="content-text">大頬骨筋をコントロールして話せているか</div>
             </div>
-            <div class="detail-box basic" style="border-style: dashed; background: none;">
+            <div class="detail-box basic">
                 <span class="label">Basic Rule</span>
-                <div class="content-text" style="color:#aaa;">(Method to be defined)</div>
+                <div class="content-text">「上の歯」を8本見せて笑う（大頬骨筋のリフトアップ）</div>
             </div>
-            <div class="section-title">Notes</div>
-            <div class="memo-area" style="border:none; padding:0; flex-grow:1;">
-                <div class="empty-lines" style="height: 100%; box-sizing:border-box;"></div>
+            <div class="section-title">Check Point</div>
+            <div class="example-area">
+                <ul style="margin:0; padding-left:20px; line-height:1.8;">
+                    <li>真顔になっていないか（真剣＝怖い、になりがち）</li>
+                    <li>眉間にシワが寄っていないか</li>
+                    <li>話していない時も、うっすら微笑んでいるか（待機顔）</li>
+                </ul>
+            </div>
+            <div class="memo-area">
+                <span class="memo-title">Memo</span>
+                <div class="empty-lines" style="height: 100px;"></div>
             </div>
             <div class="footer">The Standard / Confidential</div>
         </div>
@@ -807,13 +872,23 @@
                 <span class="label">Goal</span>
                 <div class="content-text">口角が下がって印象を悪くしていないか</div>
             </div>
-            <div class="detail-box basic" style="border-style: dashed; background: none;">
+            <div class="detail-box basic">
                 <span class="label">Basic Rule</span>
-                <div class="content-text" style="color:#aaa;">(Method to be defined)</div>
+                <div class="content-text">口の開け方は「指2本分（縦）」。母音の形をはっきりさせる。</div>
             </div>
-            <div class="section-title">Notes</div>
-            <div class="memo-area" style="border:none; padding:0; flex-grow:1;">
-                <div class="empty-lines" style="height: 100%; box-sizing:border-box;"></div>
+            <div class="deep-dive">
+                <h4>💡 Deep Dive: 母音の口の形</h4>
+                <div style="font-size: 0.95rem; line-height: 1.6;">
+                    <strong>あ：</strong> 指が縦に2本入る大きさ。<br>
+                    <strong>い：</strong> 口角を横に強く引く。<br>
+                    <strong>う：</strong> 唇を前に突き出す（タコのように）。<br>
+                    <strong>え：</strong> 「あ」と「い」の中間。舌を平らに。<br>
+                    <strong>お：</strong> 指1本分。口の中を広く保つ。
+                </div>
+            </div>
+            <div class="memo-area">
+                <span class="memo-title">Memo</span>
+                <div class="empty-lines" style="height: 100px;"></div>
             </div>
             <div class="footer">The Standard / Confidential</div>
         </div>
@@ -831,13 +906,21 @@
                 <span class="label">Goal</span>
                 <div class="content-text">視線誘導・箇条・強調など意味のある手の動き、相槌</div>
             </div>
-            <div class="detail-box basic" style="border-style: dashed; background: none;">
+            <div class="detail-box basic">
                 <span class="label">Basic Rule</span>
-                <div class="content-text" style="color:#aaa;">(Method to be defined)</div>
+                <div class="content-text">言葉の「サイズ」「方向」「感情」を手で描くように表現する</div>
             </div>
-            <div class="section-title">Notes</div>
-            <div class="memo-area" style="border:none; padding:0; flex-grow:1;">
-                <div class="empty-lines" style="height: 100%; box-sizing:border-box;"></div>
+            <div class="example-area">
+                <div class="example-text">
+                    「こんなに大きな」→ <span style="font-size:0.8rem; color:var(--text-sub);">（手で大きな円を描く）</span><br>
+                    「あちらの方へ」→ <span style="font-size:0.8rem; color:var(--text-sub);">（手のひらを向けて指す）</span><br>
+                    「心から感謝します」→ <span style="font-size:0.8rem; color:var(--text-sub);">（手を胸に当てる）</span><br><br>
+                    ※ 手のひらを相手に見せる（オープン・パーム）と、敵意がないことが伝わり信頼感が増します。
+                </div>
+            </div>
+            <div class="memo-area">
+                <span class="memo-title">Memo</span>
+                <div class="empty-lines" style="height: 100px;"></div>
             </div>
             <div class="footer">The Standard / Confidential</div>
         </div>
@@ -855,13 +938,22 @@
                 <span class="label">Goal</span>
                 <div class="content-text">背筋・首の角度はまっすぐか</div>
             </div>
-            <div class="detail-box basic" style="border-style: dashed; background: none;">
+            <div class="detail-box basic">
                 <span class="label">Basic Rule</span>
-                <div class="content-text" style="color:#aaa;">(Method to be defined)</div>
+                <div class="content-text">天井から糸で吊られているイメージで、体幹をぶらさない</div>
             </div>
-            <div class="section-title">Notes</div>
-            <div class="memo-area" style="border:none; padding:0; flex-grow:1;">
-                <div class="empty-lines" style="height: 100%; box-sizing:border-box;"></div>
+            <div class="section-title">NG Check</div>
+            <div class="example-area">
+                <ul style="margin:0; padding-left:20px; line-height:1.8;">
+                    <li>猫背になっていないか（声がこもる原因）</li>
+                    <li>話のリズムに合わせて体が揺れていないか</li>
+                    <li>片足重心になっていないか</li>
+                    <li>首が前に出ていないか（ストレートネック気味）</li>
+                </ul>
+            </div>
+            <div class="memo-area">
+                <span class="memo-title">Memo</span>
+                <div class="empty-lines" style="height: 100px;"></div>
             </div>
             <div class="footer">The Standard / Confidential</div>
         </div>
