Force cache update for Gyakko report

--- a/gyakko_bonenkai_2025/index.html
+++ b/gyakko_bonenkai_2025/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>株式会社逆光 忘年会2025 開催レポート</title>
+    <!-- Updated: 2025-12-28 23:36 -->
     <style>
         body {
             font-family: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
@@ -149,7 +150,8 @@
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>hibi（マッチ型アロマ）</strong><br>「デザインのアイデアに行き詰まった時に使ってほしい」と、自身が欲しかったものをセレクト。</li>
+                        <strong>hibi（マッチ型アロマ）</strong><br>「デザインのアイデアに行き詰まった時に使ってほしい」と、自身が欲しかったものをセレクト。
+                    </li>
                 </ul>
             </div>
 
@@ -163,7 +165,8 @@
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>「写ルンです」</strong><br>「今すごい流行ってる。今日のご縁を記録に残してほしい」というエモい配慮。</li>
+                        <strong>「写ルンです」</strong><br>「今すごい流行ってる。今日のご縁を記録に残してほしい」というエモい配慮。
+                    </li>
                 </ul>
             </div>
 
@@ -178,7 +181,8 @@
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>「あずきのチカラ（目元用）」</strong><br>「デジタル作業で疲れた目を癒やしてほしい。レンチンすると一瞬で寝れます」という実体験に基づく「ガチ」なケア用品。</li>
+                        <strong>「あずきのチカラ（目元用）」</strong><br>「デジタル作業で疲れた目を癒やしてほしい。レンチンすると一瞬で寝れます」という実体験に基づく「ガチ」なケア用品。
+                    </li>
                 </ul>
             </div>
 
@@ -193,7 +197,8 @@
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>ハンドソープ（オートディスペンサー）</strong><br>「自分じゃ買わないけどあったら嬉しい」枠。</li>
+                        <strong>ハンドソープ（オートディスペンサー）</strong><br>「自分じゃ買わないけどあったら嬉しい」枠。
+                    </li>
                 </ul>
             </div>
 
@@ -223,7 +228,8 @@
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>Aesop（ハンドクリーム等）</strong><br>「逆光の集まりにはおしゃれな人しか来ないだろう」と予測し、「大人の豊かさ」をテーマに選定。</li>
+                        <strong>Aesop（ハンドクリーム等）</strong><br>「逆光の集まりにはおしゃれな人しか来ないだろう」と予測し、「大人の豊かさ」をテーマに選定。
+                    </li>
                 </ul>
             </div>
 
@@ -239,7 +245,8 @@
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>紅茶の詰め合わせ</strong><br>本通りの紅茶専門店でセレクト。「色んなフレーバーが入っていて長く楽しめる」気配りの品。</li>
+                        <strong>紅茶の詰め合わせ</strong><br>本通りの紅茶専門店でセレクト。「色んなフレーバーが入っていて長く楽しめる」気配りの品。
+                    </li>
                 </ul>
             </div>
 
@@ -273,7 +280,8 @@
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>カンボジアの生胡椒（塩漬け）</strong><br>「卵かけご飯に乗せると絶品。お酒のアテにもなる」。知人が扱っているこだわりの逸品。</li>
+                        <strong>カンボジアの生胡椒（塩漬け）</strong><br>「卵かけご飯に乗せると絶品。お酒のアテにもなる」。知人が扱っているこだわりの逸品。
+                    </li>
                 </ul>
             </div>
 
@@ -308,7 +316,8 @@
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>こだわりスイーツ</strong><br>「僕に刺さりすぎて家に何十個もストックがある」という激推しスイーツ。</li>
+                        <strong>こだわりスイーツ</strong><br>「僕に刺さりすぎて家に何十個もストックがある」という激推しスイーツ。
+                    </li>
                 </ul>
             </div>
 
@@ -324,7 +333,8 @@
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>倉敷帆布の小物</strong><br>「通販にはない、現地でしか買えない、在庫限りのレア物」。</li>
+                        <strong>倉敷帆布の小物</strong><br>「通販にはない、現地でしか買えない、在庫限りのレア物」。
+                    </li>
                 </ul>
             </div>
 
